-
Bug
-
Resolution: Done
-
P2: Important
-
5.15.0
-
None
-
1
-
f172f0dee931821991905879d03c01a409975983 (qt/qtbase/dev) d594d437da5d9dd3fd561a647fef95c25fc6e824 (qt/qtbase/5.15)
-
Da Vinci sprint 12
The example in https://doc.qt.io/qt-5/qfuturewatcher.html#details won't compile this way as the signal must be a method reference.
Change from
connect(&watcher, QFutureWatcher<int>::finished, &myObject, &MyClass::handleFinished);
to
connect(&watcher, &QFutureWatcher<int>::finished, &myObject, &MyClass::handleFinished);
For Gerrit Dashboard: QTBUG-85390 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
306602,2 | Doc: Fix connect syntax in snippet | dev | qt/qtbase | Status: MERGED | +2 | 0 |
306713,2 | Doc: Fix connect syntax in snippet | 5.15 | qt/qtbase | Status: MERGED | +2 | 0 |