Doc: Fix connect syntax in snippet

Pick-to: 5.15
Fixes: QTBUG-85390
Change-Id: I67dbacd977acb6abdafb3b57818f24bf4a2dd302
Reviewed-by: Nico Vertriest <nico.vertriest@qt.io>
Reviewed-by: Mårten Nordheim <marten.nordheim@qt.io>