src/corelib/doc/snippets/code/src_corelib_thread_qfuturewatcher.cpp
@@ -52,7 +52,7 @@
 // Instantiate the objects and connect to the finished signal.
 MyClass myObject;
 QFutureWatcher<int> watcher;
-connect(&watcher, QFutureWatcher<int>::finished, &myObject, &MyClass::handleFinished);
+connect(&watcher, &QFutureWatcher<int>::finished, &myObject, &MyClass::handleFinished);
 
 // Start the computation.
 QFuture<int> future = QtConcurrent::run(...);
